--- a/dv/localisation/countries_l_english.yml
+++ b/dv/localisation/countries_l_english.yml
@@ -7334,9 +7334,9 @@
  GER_reactionary:0 "Deutsch Republik"
  GER_democratic_socialism:0 "Deutsch Republik"
  GER_authoritarian_democracy:0 "Deutsch Republik"
- GER_national_socialism:0 "Deutsches Reich"
- GER_fascism:0 "Deutsches Reich"
- GER_nationalism:0 "Deutsch Staat"
+ GER_national_socialism:0 "Russian State"
+ GER_fascism:0 "Russian State"
+ GER_nationalism:0 "Russian State"
  GER_leninism:0 "Deutsches Volker Republik"
  GER_stalinism:0 "Deutsches Volker Republik"
  GER_revisionism:0 "Deutsches Volker Republik"
@@ -7374,9 +7374,9 @@
  GER_reactionary_DEF:0 "The Deutsch Republik"
  GER_democratic_socialism_DEF:0 "The Deutsch Republik"
  GER_authoritarian_democracy_DEF:0 "The Deutsch Republik"
- GER_national_socialism_DEF:0 "The Deutsches Reich"
- GER_fascism_DEF:0 "The Deutsches Reich"
- GER_nationalism_DEF:0 "The Deutsch Staat"
+ GER_national_socialism_DEF:0 "The Russian State"
+ GER_fascism_DEF:0 "The Russian State"
+ GER_nationalism_DEF:0 "The Russian State"
  GER_leninism_DEF:0 "The Deutsches Volker Republik"
  GER_stalinism_DEF:0 "The Deutsches Volker Republik"
  GER_absolute_monarchy_DEF:0 "The German Empire"
@@ -7401,9 +7401,9 @@
  SAX_reactionary:0 "Kingdom of Saxony"
  SAX_democratic_socialism:0 "Kingdom of Saxony"
  SAX_authoritarian_democracy:0 "Kingdom of Saxony"
- SAX_national_socialism:0 "Deutsches Reich"
- SAX_fascism:0 "Deutsches Reich"
- SAX_nationalism:0 "Deutsch Staat"
+ SAX_national_socialism:0 "Russian State"
+ SAX_fascism:0 "Russian State"
+ SAX_nationalism:0 "Russian State"
  SAX_leninism:0 "Saxon People's Republic"
  SAX_stalinism:0 "Saxon People's Republic"
  SAX_revisionism:0 "Saxon People's Republic"
@@ -7441,9 +7441,9 @@
  SAX_reactionary_DEF:0 "The Kingdom of Saxony"
  SAX_democratic_socialism_DEF:0 "The Kingdom of Saxony"
  SAX_authoritarian_democracy_DEF:0 "The Kingdom of Saxony"
- SAX_national_socialism_DEF:0 "The Deutsches Reich"
- SAX_fascism_DEF:0 "The Deutsches Reich"
- SAX_nationalism_DEF:0 "The Deutsch Staat"
+ SAX_national_socialism_DEF:0 "The Russian State"
+ SAX_fascism_DEF:0 "The Russian State"
+ SAX_nationalism_DEF:0 "The Russian State"
  SAX_leninism_DEF:0 "The Saxon People's Republic"
  SAX_stalinism_DEF:0 "The Saxon People's Republic"
  SAX_absolute_monarchy_DEF:0 "The Grand State of Saxony"
@@ -7459,6 +7459,73 @@
  SAX_democratic_nationalism_ADJ:0 "Saxon"
  SAX_christian_democracy_DEF:0 "The Kingdom of Saxony"
  SAX_democratic_nationalism_DEF:0 "The Kingdom of Saxony"
+ 
+ SSU_social_liberal:0 "Russian Federation"
+ SSU_market_liberal:0 "Russian Federation"
+ SSU_conservative:0 "Russian Federation"
+ SSU_progressive:0 "Russian Federation"
+ SSU_social_democracy:0 "Russian Federation"
+ SSU_reactionary:0 "Russian Federation"
+ SSU_democratic_socialism:0 "Russian Federation"
+ SSU_authoritarian_democracy:0 "Russian Federation"
+ SSU_national_socialism:0 "Russian State"
+ SSU_fascism:0 "Russian State"
+ SSU_nationalism:0 "Russian State"
+ SSU_leninism:0 "Soviet People's Republic"
+ SSU_stalinism:0 "Soviet People's Republic"
+ SSU_revisionism:0 "Soviet People's Republic"
+ SSU_absolute_monarchy:0 "Grand Empire of Soviet"
+ SSU_religious:0 "Soviet Christian Kingdom"
+ SSU_anarchism:0 "Free Soviet Territories"
+ SSU_militarism:0 "Soviet Military Junta"
+ SSU_fascist_monarchy:0 "Grand State of Soviet"
+ SSU_authoritarian:0 "Soviet"
+ SSU_social_liberal_ADJ:0 "Soviet"
+ SSU_market_liberal_ADJ:0 "Soviet"
+ SSU_conservative_ADJ:0 "Soviet"
+ SSU_progressive_ADJ:0 "Soviet"
+ SSU_social_democracy_ADJ:0 "Soviet"
+ SSU_reactionary_ADJ:0 "Soviet"
+ SSU_democratic_socialism_ADJ:0 "Soviet"
+ SSU_revisionism_ADJ:0 "Soviet"
+ SSU_authoritarian_democracy_ADJ:0 "Soviet"
+ SSU_national_socialism_ADJ:0 "Soviet"
+ SSU_fascism_ADJ:0 "Soviet"
+ SSU_nationalism_ADJ:0 "Soviet"
+ SSU_leninism_ADJ:0 "Soviet"
+ SSU_stalinism_ADJ:0 "Soviet"
+ SSU_absolute_monarchy_ADJ:0 "Soviet"
+ SSU_religious_ADJ:0 "Soviet"
+ SSU_anarchism_ADJ:0 "Soviet"
+ SSU_militarism_ADJ:0 "Soviet"
+ SSU_fascist_monarchy_ADJ:0 "Soviet"
+ SSU_authoritarian_ADJ:0 "Soviet"
+ SSU_social_liberal_DEF:0 "The Russian Federation"
+ SSU_market_liberal_DEF:0 "The Russian Federation"
+ SSU_conservative_DEF:0 "The Russian Federation"
+ SSU_progressive_DEF:0 "The Russian Federation"
+ SSU_social_democracy_DEF:0 "The Russian Federation"
+ SSU_reactionary_DEF:0 "The Russian Federation"
+ SSU_democratic_socialism_DEF:0 "The Russian Federation"
+ SSU_authoritarian_democracy_DEF:0 "The Russian Federation"
+ SSU_national_socialism_DEF:0 "The Russian State"
+ SSU_fascism_DEF:0 "The Russian State"
+ SSU_nationalism_DEF:0 "The Russian State"
+ SSU_leninism_DEF:0 "The Soviet People's Republic"
+ SSU_stalinism_DEF:0 "The Soviet People's Republic"
+ SSU_absolute_monarchy_DEF:0 "The Grand Empire of Soviet"
+ SSU_religious_DEF:0 "The Russian Orthodoxy State"
+ SSU_anarchism_DEF:0 "The Free Soviet Territories"
+ SSU_militarism_DEF:0 "The Soviet Military Junta"
+ SSU_fascist_monarchy_DEF:0 "The Grand State of Soviet"
+ SSU_authoritarian_DEF:0 "Soviet"
+ SSU_revisionism_DEF:0 "The Soviet People's Republic"
+ SSU_christian_democracy:0 "Russian Federation"
+ SSU_democratic_nationalism:0 "Russian Federation"
+ SSU_christian_democracy_ADJ:0 "Soviet"
+ SSU_democratic_nationalism_ADJ:0 "Soviet"
+ SSU_christian_democracy_DEF:0 "The Russian Federation"
+ SSU_democratic_nationalism_DEF:0 "The Russian Federation"
  # Faction Names
  
  FACTION_NAME_DEMOCRATIC_1:0 "The $CONTINENT_ADJ$ Association"
