--- a/dv/localisation/countries_l_english.yml
+++ b/dv/localisation/countries_l_english.yml
@@ -7334,9 +7334,9 @@
  GER_reactionary:0 "Deutsch Republik"
  GER_democratic_socialism:0 "Deutsch Republik"
  GER_authoritarian_democracy:0 "Deutsch Republik"
- GER_national_socialism:0 "Russian State"
- GER_fascism:0 "Russian State"
- GER_nationalism:0 "Russian State"
+ GER_national_socialism:0 "Deutschsozialen Reich"
+ GER_fascism:0 "Deutschsozialen Reich"
+ GER_nationalism:0 "Deutschsozialen Reich"
  GER_leninism:0 "Deutsches Volker Republik"
  GER_stalinism:0 "Deutsches Volker Republik"
  GER_revisionism:0 "Deutsches Volker Republik"
@@ -7526,6 +7526,73 @@
  SSU_democratic_nationalism_ADJ:0 "Soviet"
  SSU_christian_democracy_DEF:0 "The Russian Federation"
  SSU_democratic_nationalism_DEF:0 "The Russian Federation"
+
+ KAR_social_liberal:0 "Finnish Occupation Zone of Kola"
+ KAR_market_liberal:0 "Finnish Occupation Zone of Kola"
+ KAR_conservative:0 "Finnish Occupation Zone of Kola"
+ KAR_progressive:0 "Finnish Occupation Zone of Kola"
+ KAR_social_democracy:0 "Finnish Occupation Zone of Kola"
+ KAR_reactionary:0 "Finnish Occupation Zone of Kola"
+ KAR_democratic_socialism:0 "Finnish Occupation Zone of Kola"
+ KAR_authoritarian_democracy:0 "Finnish Occupation Zone of Kola"
+ KAR_national_socialism:0 "Republic of Finnish Murmansk"
+ KAR_fascism:0 "Republic of Finnish Murmansk"
+ KAR_nationalism:0 "Republic of Finnish Murmansk"
+ KAR_leninism:0 "SSR Murmansk"
+ KAR_stalinism:0 "SSR Murmansk"
+ KAR_revisionism:0 "SSR Murmansk"
+ KAR_absolute_monarchy:0 "Sami Empire"
+ KAR_religious:0 "Murmansk Christian Kingdom"
+ KAR_anarchism:0 "Free Karelian Territories"
+ KAR_militarism:0 "Karelian Military Junta"
+ KAR_fascist_monarchy:0 "Grand Kingdom of Karelia"
+ KAR_authoritarian:0 "Karelian"
+ KAR_social_liberal_ADJ:0 "Karelian"
+ KAR_market_liberal_ADJ:0 "Karelian"
+ KAR_conservative_ADJ:0 "Karelian"
+ KAR_progressive_ADJ:0 "Karelian"
+ KAR_social_democracy_ADJ:0 "Karelian"
+ KAR_reactionary_ADJ:0 "Karelian"
+ KAR_democratic_socialism_ADJ:0 "Karelian"
+ KAR_revisionism_ADJ:0 "Karelian"
+ KAR_authoritarian_democracy_ADJ:0 "Karelian"
+ KAR_national_socialism_ADJ:0 "Karelian"
+ KAR_fascism_ADJ:0 "Karelian"
+ KAR_nationalism_ADJ:0 "Karelian"
+ KAR_leninism_ADJ:0 "Karelian"
+ KAR_stalinism_ADJ:0 "Karelian"
+ KAR_absolute_monarchy_ADJ:0 "Karelian"
+ KAR_religious_ADJ:0 "Karelian"
+ KAR_anarchism_ADJ:0 "Karelian"
+ KAR_militarism_ADJ:0 "Karelian"
+ KAR_fascist_monarchy_ADJ:0 "Karelian"
+ KAR_authoritarian_ADJ:0 "Karelian"
+ KAR_social_liberal_DEF:0 "The Finnish Occupation Zone of Kola"
+ KAR_market_liberal_DEF:0 "The Finnish Occupation Zone of Kola"
+ KAR_conservative_DEF:0 "The Finnish Occupation Zone of Kola"
+ KAR_progressive_DEF:0 "The Finnish Occupation Zone of Kola"
+ KAR_social_democracy_DEF:0 "The Finnish Occupation Zone of Kola"
+ KAR_reactionary_DEF:0 "The Finnish Occupation Zone of Kola"
+ KAR_democratic_socialism_DEF:0 "The Finnish Occupation Zone of Kola"
+ KAR_authoritarian_democracy_DEF:0 "The Finnish Occupation Zone of Kola"
+ KAR_national_socialism_DEF:0 "The Republic of Finnish Murmansk"
+ KAR_fascism_DEF:0 "The Republic of Finnish Murmansk"
+ KAR_nationalism_DEF:0 "The Republic of Finnish Murmansk"
+ KAR_leninism_DEF:0 "The SSR Murmansk"
+ KAR_stalinism_DEF:0 "The SSR Murmansk"
+ KAR_absolute_monarchy_DEF:0 "The Grand Empire of Karelian"
+ KAR_religious_DEF:0 "The Russian Orthodoxy State"
+ KAR_anarchism_DEF:0 "The Free Karelian Territories"
+ KAR_militarism_DEF:0 "The Karelian Military Junta"
+ KAR_fascist_monarchy_DEF:0 "The Grand State of Karelian"
+ KAR_authoritarian_DEF:0 "Karelian"
+ KAR_revisionism_DEF:0 "The SSR Murmansk"
+ KAR_christian_democracy:0 "Finnish Occupation Zone of Kola"
+ KAR_democratic_nationalism:0 "Finnish Occupation Zone of Kola"
+ KAR_christian_democracy_ADJ:0 "Karelian"
+ KAR_democratic_nationalism_ADJ:0 "Karelian"
+ KAR_christian_democracy_DEF:0 "The Finnish Occupation Zone of Kola"
+ KAR_democratic_nationalism_DEF:0 "The Finnish Occupation Zone of Kola"
  # Faction Names
  
  FACTION_NAME_DEMOCRATIC_1:0 "The $CONTINENT_ADJ$ Association"
